--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "Bot que evalúa issues con Gemini AI",
   "main": "index.js",
   "scripts": {
-    "start": "probot run ./index.js",
-    "dev": "nodemon --exec npm start"
+    "start": "node start.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
-    "probot": "^13.4.7"
+    "probot": "^13.3.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "smee-client": "^2.0.4"
+    "nodemon": "^3.1.0",
+    "smee-client": "^2.0.1"
   }
 }
